# PINN_KFAC

./: CITATION.cff  Plan.tex  README.md  environment.yml  pyproject.toml
examples/: v6_two_tree_solver.py
notebooks/: 01_introduction_to_taylor_mode.ipynb  02_gradient_operator.ipynb  03_high_order_derivatives.ipynb  04_PINN_loss_demo.ipynb  05_randomized_taylor_mode.ipynb  06_simple_PINN_example.ipynb  08_KFAC_implementation.ipynb  09_stochastic_laplacian.ipynb  10_pinn_with_kfac.ipynb  11_kfac_training.ipynb  12_poisson_residual_demo.ipynb  13_heat_residual_demo.ipynb  14_burgers_residual_demo.ipynb  15_lq_fbsde.ipynb  _nested.npz
notebooks/Old_Examples/: 01_introduction_to_taylor_mode.ipynb
src/: __init__.py
src/fbsde/: __init__.py  lq.py
src/kron_utils/: __init__.py  kfac.py
src/networks/: __init__.py  simple_mlp.py
src/pinns/: __init__.py  loss.py  operators.py  trainer.py
src/taylor_mode/: __init__.py  collapse.py  forward.py  jet.py  randomize.py
src/utils/: __init__.py  g_matrix.py  jet_prim.py  random.py
tests/: test_fbsde.py  test_fbsde_docs.py  test_forward.py  test_hessian.py  test_kfac.py  test_networks.py  test_pinns.py  test_randomize.py  test_series.py  test_trainer.py  test_utils.py
